--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 quiche = { version = "*" }
 quinn = { version = "*" }
 tokio = { version = "1", features = ["full"] }
+clap = {version="*", features = ["derive"]}
 
 [[bin]]
 name = "tcp-reference"
