--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ quiche = { version = "*" }
 quinn = { version = "*" }
 rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
 tokio = { version = "1", features = ["full"] }
-clap = { version="*", features = ["derive"] }
-rcgen = "*"
+clap = { version = "*", features = ["derive"] }
+rcgen = "0.12.1"
 
 [[bin]]
 name = "server"
